Marcacao de segunranca. mudanca de logos novas paginas de funil, boar, ajuste de rota, mudanca da sidebar do backoffice

--- a/www/criar-conta.html
+++ b/www/criar-conta.html
@@ -14,13 +14,10 @@
         </div>
         <div class="col-12 col-lg-6">
             <div class="d-flex flex-column h-100 justify-content-center align-items-center">
-                <header class="mb-4">
-                    <img src="assets/images/spacefeed-black.png" class="img-fluid" width="240" alt="Spacefeed Logo" dmx-on:click="navegacao.goto('/',true)">
-                </header>
                 <main class="w-100 d-flex justify-content-center mb-4">
                     <div class="col-12 col-sm-11 col-md-10 col-lg-12 col-xl-11 col-xxl-10 p-4 p-md-5 p-lg-6 glass-background-solid">
                         <div class="text-center mb-4">
-                            <h1 class="h3 mb-2">Criar Conta</h1>
+                            <img src="assets/images/Spacefeed%20AVP%20-%2003.png" class="img-fluid mb-4" width="160" alt="Spacefeed Logo" dmx-on:click="navegacao.goto('/',true)">
                             <p class="h6 text-muted mb-0">Preencha o formulário abaixo para criar sua conta.</p>
                         </div>
 
