--- a/www/home.html
+++ b/www/home.html
@@ -34,15 +34,12 @@
         <div class="col-12 col-lg-6 h-100">
             <div class="d-flex flex-column h-100 justify-content-center align-items-center">
                 <!-- Logo -->
-                <header class="mb-4">
-                    <img src="assets/images/spacefeed-black.png" class="img-fluid" width="240" alt="Spacefeed Logo">
-                </header>
 
                 <!-- Container do Formulário -->
                 <main class="w-100 d-flex justify-content-center mb-4">
                     <div class="col-12 col-sm-10 col-md-8 col-lg-10 col-xl-9 col-xxl-8 p-4 p-md-5 p-lg-6 glass-background-solid">
                         <div class="text-center mb-4">
-                            <h1 class="h3 mb-2">Bem-vindo(a)</h1>
+                            <img src="assets/images/Spacefeed%20AVP%20-%2003.png" class="img-fluid mb-4" width="160" alt="Spacefeed Logo">
                             <p class="h6 text-muted mb-0">Acesse o seu CRM de atendimento e prospecção de alunos</p>
                         </div>
 
